--- a/index.html
+++ b/index.html
@@ -12,38 +12,45 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body ite>
+  <ul class="skip-link">
+    <li><a href="#main-nav">Menu</a></li>
+    <li><a href="#main-content">Content</a></li>
   <div class="container">
-    <div class="site-header">
+    <header>
+    <div class="site-header" role="main">
       <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+      <nav class="main-nav" id="main-nav"  role="navigation">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Reservation</a></li>
           <li><a href="#">Studio</a></li>
         </ul>
-      </div>
+      </nav>
       <img src="https://placecats.com/300/200" class="banner">
+    </header>
     </div>
-    <div class="main-content">
+    <main class="main-content" id="main-content" role="main">
+      <article>
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
+      </article>
       <div class="owner">
-        <h1>Meet the owner</h1>
+        <h1 itemscope itemtype=https://schema.org/Person">Meet the owner</h1>
         <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+          <li itemprop="givenName">Name: John Doe</li>
+          <li itemprop="jobTitle">Title: CEO</li>
+          <li itemprop="email">Email: johnjoe@jambox.ca</li>
+          <li itemprop="telephone">Phone: 613-000-0000</li>
         </ul>
-        <h1>Address</h1>
+        <h1 itemscope itemtype="https://schema.org/PostalAddress">Address</h1>
         <p>
-          Jambox Studios
-          123 Guitar Road,
-          Musicville, Danceistan
-          B3T 0L0
+          <span itemprop="alternateName"> Jambox Studios</span>
+          <span itemprop="streetAddress">123 Guitar Road,</span>
+          <span itemprop="addressLocality">Musicville, Danceistan
+          <span itemprop="postalCode">B3T 0L0</span>
         </p>
       </div>
       <div class="contact-section">
@@ -58,11 +65,10 @@
           <button type="submit">Send</button>
         </form>
       </div>
-    </div>
-    <div class="site-footer">
+    </main>
+  <footer  role="contentinfo" >
       &copy; 2021 Jam Box Studios
-    </div>
+  </footer>
   </div>
 </body>
-
 </html>
